--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,5 @@
-{ "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }] }
+{
+  "version": 2,
+  "builds": [{ "src": "next.config.js", "use": "@vercel/node" }],
+  "routes": [{ "handle": "filesystem" }]
+}
